Fix Bug #6627 Queue names are wrapped badly by the browser

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.AgentTicketQueue.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.AgentTicketQueue.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.2 $
+ * @version     $Revision: 1.3 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -38,6 +38,7 @@
     list-style: none;
     padding: 2px 5px;
     height: 14px;
+    white-space:nowrap;
 }
 
 .RTL .QueueOverviewList li {
